feature/initialize_plugin_example (#3)
* Added implementation of plugin initialisation

* readded missing field